# whisper-intel-inference-engine

./: .gitignore  README.md  main.py  pyproject.toml
ov_whisper/: audio.py  engine.py  realtime.py  transcribe.py
scripts/: benchmark.py  download_model.py  export_model.py
